Actualizacion de assets Font Awesome

--- a/StackJobs/index.html
+++ b/StackJobs/index.html
@@ -16,7 +16,7 @@
     <link href="assets/js/plugins/owl-carousel/owl.transitions.css" rel="stylesheet">
     <link href="assets/js/plugins/Magnific-Popup-master/Magnific-Popup-master/dist/magnific-popup.css" rel="stylesheet">
     <!--// ICONS //-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--// BOOTSTRAP & Main //-->
     <link href="assets/bootstrap-3.3.7/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
