--- a/StackJobs/index.html
+++ b/StackJobs/index.html
@@ -7,7 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title ng-bind="headerMain.title"></title>
     <link rel="shortcut icon" href="assets/img/stackjobs_icon.png">
-    <!-- App.css Included For Raw State in AngulaJS -->
+    <script src="https://kit.fontawesome.com/21b54dd064.js" crossorigin="anonymous"></script>
+
+
+
+
+    
+    <!-- App.css Included For Raw State in AngulaJS --></i>
     <link rel="stylesheet" href="libs/app.css">
     <!-- CSS Bootstarp and create owner -->
     <link href="assets/js/plugins/bootsnav_files/skins/color.css" rel="stylesheet">
