Renombramiento de servicios

--- a/StackJobs/index.html
+++ b/StackJobs/index.html
@@ -8,7 +8,8 @@
     <title ng-bind="headerMain.title"></title>
     <link rel="shortcut icon" href="assets/img/stackjobs_icon.png">
     <script src="https://kit.fontawesome.com/21b54dd064.js" crossorigin="anonymous"></script>
-    <!-- App.css Included For Raw State in AngulaJS --></i>
+    <!-- App.css Included For Raw State in AngulaJS -->
+    </i>
     <link rel="stylesheet" href="libs/app.css">
     <!-- CSS Bootstarp and create owner -->
     <link href="assets/js/plugins/bootsnav_files/skins/color.css" rel="stylesheet">
@@ -56,12 +57,12 @@
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active scroll"><a href="#home">Home</a></li>
-                    <li class="scroll"><a href="#about">About</a></li>
-                    <li class="scroll"><a href="#services">Services</a></li>
-                    <li class="scroll"><a href="#price">Price</a></li>
+                    <li class="scroll"><a href="#about">Acerca de</a></li>
+                    <li class="scroll"><a href="#services">Servicios</a></li>
+                    <li class="scroll"><a href="#price">Precio</a></li>
                     <li class="scroll"><a href="#team">Team</a></li>
-                    <li class="scroll"><a href="#clients">Clients</a></li>
-                    <li class="scroll"><a href="#contact">Contact</a></li>
+                    <li class="scroll"><a href="#clients">Empresas</a></li>
+                    <li class="scroll"><a href="#contact">Contacto</a></li>
                     <li class="button-holder">
                         <button type="button" class="btn btn-blue navbar-btn" data-toggle="modal" data-target="#SignIn">Sign in</button>
                     </li>
